# mdrend

./: README.md  pyproject.toml
src/mdrend/: __init__.py  cli.py  temp.html  test.md
src/mdrend/templates/: template.html
