[project]
name = "mdrend"
version = "0.1.1"
description = "CLI tool that allows you to view local markdown files in browser while writing"
readme = "README.md"
authors = [
    { name = "Nitin Rao", email = "nitinsprao@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "mistune>=3.2.0",
    "pygments>=2.19.2",
]
license="MIT"
license-files=["LICEN[CS]E*"]

[project.urls]
Repository = "https://github.com/NitinSPRao/mdrend"

[project.scripts]
mdrend = "mdrend.cli:main"

[tool.setuptools.package-data]
mdrend = ["templates/*.html"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
